# typist

./: +FUNCTIONALITY.md  +GOALS.md  App.xaml  App.xaml.cs  CMakeLists.txt  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  conandata.yml  config.cpp  config.hpp  config.yml  config_test.cpp  symbol_data.cpp  symbol_data.hpp  symbol_search_test.cpp  tsf_test.cpp  typist.sln
